# canvas

./: Cargo.toml  readme.md
src/: color.rs  main.rs
static/: app.js  colors.js  index.html
