[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.62"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = [
    "trace",
    "fs",
    "compression-gzip",
] }
futures = "0.3.30"
figment = { version = "0.10.19", features = ["toml", "env"] }
