[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace", "fs", "compression-gzip"] }
futures = "0.3"
figment = { version = "0.10", features = ["toml", "env"] }
